unpackaged/main/default/objects/Opportunity/fields/Renewal_Rate__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Rate__c</fullName>
    <label>Renewal Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>