unpackaged/main/default/objects/Opportunity/fields/Renewal_Sales__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Sales__c</fullName>
    <formula>IF( Recovery__c ,0,IF(ISPICKVAL(Type ,"CW: Single Renewal"),Amount,IF(ISPICKVAL(Type ,"CW: Multi Renewal"),Amount,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>