unpackaged/main/default/objects/Opportunity/fields/Revenue_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Remaining__c</fullName>
    <formula>Round((Monthly_Revenue__c * Months_Remaining__c),2)</formula>
    <label>Revenue Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>