unpackaged/main/default/objects/Opportunity/fields/Sales_Rep_New__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_New__c</fullName>
    <description>New field to replace the old Lookup field ... so that we can maintain former reps as the salesperson without having to keep them as a User.</description>
    <label>Sales Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doug Juenemann</fullName>
            </value>
            <value>
                <fullName>Elizabeth Sucher</fullName>
            </value>
            <value>
                <fullName>Michelle Totilo</fullName>
            </value>
            <value>
                <fullName>Donna Rice</fullName>
            </value>
            <value>
                <fullName>Patrick Romano</fullName>
            </value>
            <value>
                <fullName>Chris Goldsholl</fullName>
            </value>
            <value>
                <fullName>Chris MacDonald</fullName>
            </value>
            <value>
                <fullName>Donna O'Neill</fullName>
            </value>
            <value>
                <fullName>Justine Healy</fullName>
            </value>
            <value>
                <fullName>Angela Ruggiero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>