unpackaged/main/default/objects/Opportunity/fields/Single_Multi__c.field-meta.xml
<CustomField>
    <fullName>Single_Multi__c</fullName>
    <label>Single/Multi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>