unpackaged/main/default/objects/Opportunity/fields/Source_Note__c.field-meta.xml
<CustomField>
    <fullName>Source_Note__c</fullName>
    <label>Source Note</label>
    <length>100</length>
    <type>Text</type>
</CustomField>