unpackaged/main/default/objects/Opportunity/fields/Subscription_Expires__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Expires__c</fullName>
    <label>Subscription Expires</label>
    <type>Date</type>
</CustomField>