unpackaged/main/default/objects/Opportunity/fields/Subscription_Number__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Number__c</fullName>
    <label>Subscription Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>