unpackaged/main/default/objects/Opportunity/fields/Subscription_Starts__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Starts__c</fullName>
    <label>Subscription Starts</label>
    <type>Date</type>
</CustomField>