unpackaged/main/default/objects/Opportunity/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <formula>( Subscription_Expires__c  -  Subscription_Starts__c ) / 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>