unpackaged/main/default/objects/Opportunity/fields/Term_Duration__c.field-meta.xml
<CustomField>
    <fullName>Term_Duration__c</fullName>
    <formula>Term_End_Date__c - Term_Starts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>