unpackaged/main/default/objects/Opportunity/fields/Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Date__c</fullName>
    <formula>Term_Starts__c +( Term_Length__c *30.41667)-1</formula>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>