unpackaged/main/default/objects/Opportunity/fields/Term_End_Month__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Month__c</fullName>
    <formula>Term_Start_Month__c +( Term_Length__c *30.41667)-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term End Month</label>
    <type>Date</type>
</CustomField>