unpackaged/main/default/objects/Opportunity/fields/Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Term_Length__c</fullName>
    <description>Length of order term, in number of months</description>
    <label>Term Length (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>