unpackaged/main/default/objects/Opportunity/fields/Term_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Term_Start_Month__c</fullName>
    <formula>Date(Year( Term_Starts__c ),Month( Term_Starts__c ),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Start Month</label>
    <type>Date</type>
</CustomField>