unpackaged/main/default/objects/Opportunity/fields/Term_Starts__c.field-meta.xml
<CustomField>
    <fullName>Term_Starts__c</fullName>
    <description>Date that order term starts</description>
    <inlineHelpText>Date May Not Be In The Past!</inlineHelpText>
    <label>Term Starts</label>
    <type>Date</type>
</CustomField>