unpackaged/main/default/objects/Opportunity/fields/Total_Rate_Card_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Rate_Card_Price__c</fullName>
    <label>Total Rate Card Price</label>
    <summarizedField>OpportunityLineItem.ListPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>