unpackaged/main/default/objects/Opportunity/fields/Transaction_Description__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Description__c</fullName>
    <formula>IF(ISPICKVAL( Type,"International Surcharge"), "Surcharge for Overseas Print Copies",IF(ISPICKVAL( Type,"CW: 90-Day Access"), "90-Day Access Subscription To Compliance Week",IF(ISPICKVAL( Type,"CW: 30-Day Access"), "30-Day Access Subscription To Compliance Week",IF(ISPICKVAL( Type,"CW: Single New"), "Single-User Subscription To Compliance Week", IF(ISPICKVAL( Type,"CW: Single Renewal"), "Renewal of Single-User Subscription To Compliance Week", IF(ISPICKVAL( Type,"CW: Multi New"), "Multi-User Subscription To Compliance Week", IF(ISPICKVAL( Type,"CW: Multi Renewal"), "Renewal of Multi-User Subscription To Compliance Week",IF(ISPICKVAL( Type,"CW: Upgrade"), "Upgrade To Multi-User Subscription To Compliance Week","-"))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Description (for invoice)</label>
    <type>Text</type>
</CustomField>