unpackaged/main/default/objects/Opportunity/fields/Transaction_Paid__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Yes or no</description>
    <label>Paid?</label>
    <type>Checkbox</type>
</CustomField>