unpackaged/main/default/objects/Opportunity/recordTypes/Advertising_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Advertising_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Advertising</businessProcess>
    <label>Advertising Opportunity</label>
</RecordType>