unpackaged/main/default/objects/Opportunity/recordTypes/Auxillary_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>Auxillary_Opportunities</fullName>
    <active>true</active>
    <businessProcess>Subscriptions</businessProcess>
    <description>Items such as special reports, reprints, and others.</description>
    <label>Auxillary Opportunities</label>
</RecordType>