unpackaged/main/default/objects/Opportunity/recordTypes/Data_Sales.recordType-meta.xml
<RecordType>
    <fullName>Data_Sales</fullName>
    <active>true</active>
    <businessProcess>Data Sales</businessProcess>
    <description>Opportunities related to our Data Research Division.</description>
    <label>Data Sales Opportunities</label>
</RecordType>