unpackaged/main/default/objects/Opportunity/recordTypes/Registrations_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Registrations_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Registrations</businessProcess>
    <label>Registrations Opportunity</label>
</RecordType>