unpackaged/main/default/objects/Opportunity/recordTypes/Subscriptions_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Subscriptions_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Subscriptions</businessProcess>
    <label>Subscription Opportunity</label>
</RecordType>