unpackaged/main/default/objects/Opportunity/validationRules/Closed_Ops_Must_Have_Today_as_Close_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Ops_Must_Have_Today_as_Close_Date</fullName>
    <active>true</active>
    <description>The Close Date must be today in order to close an opportunity.</description>
    <errorConditionFormula>AND( 
OR( 
TEXT(StageName)="Closed Won", 
TEXT(StageName)="Closed Lost"), 
ISCHANGED(StageName), 
$Profile.Name &lt;&gt; "System Administrator", 
CloseDate &lt;&gt; TODAY() 
)</errorConditionFormula>
    <errorMessage>The Close Date must be today in order to close an opportunity.</errorMessage>
</ValidationRule>