unpackaged/main/default/objects/Opportunity/validationRules/Opportunity_must_have_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_must_have_Products</fullName>
    <active>true</active>
    <errorConditionFormula>AND((ISPICKVAL(StageName,"Closed Won") || ISPICKVAL(StageName,"Won")) , 
HasOpportunityLineItem  = FALSE,
Business_Unit__c = "Compliance Week",
ISPICKVAL(Type,"Subscription")
)</errorConditionFormula>
    <errorMessage>You must add Products</errorMessage>
</ValidationRule>