unpackaged/main/default/objects/Opportunity/validationRules/Payment_1_Due.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_1_Due</fullName>
    <active>true</active>
    <description>Requires Payment 1 Due to be filled in prior to Closed Won</description>
    <errorConditionFormula>AND(IsWon , ISBLANK( Payment_1_Due__c ),  $RecordType.Name != 'Registrations Opportunity',  $Profile.Name != 'System Administrator')</errorConditionFormula>
    <errorMessage>The Payment 1 Due field must be completed before this can be marked as Closed Won.</errorMessage>
</ValidationRule>