unpackaged/main/default/objects/Opportunity/validationRules/Sub_Renewals_cant_exceed_1_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Renewals_cant_exceed_1_Product</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Type,"Subscription"),
ISPICKVAL( Single_Multi__c, "Single"),
(ISPICKVAL(Business_Type__c, "Renewal")||
ISPICKVAL(Business_Type__c, "Renewal Upgrade") || ISPICKVAL(Business_Type__c, "Upgrade")),
No_of_Products__c &gt; 1,
Business_Unit__c = "Compliance Week"
)</errorConditionFormula>
    <errorMessage>Subscription Renewal and Upgrade Opportunities are limited to 1 Product.</errorMessage>
</ValidationRule>