unpackaged/main/default/objects/Opportunity/listViews/All_active_opps.listView-meta.xml
<ListView>
    <fullName>All_active_opps</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>Term_End_Date__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Term_End_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.AMOUNT</field>
        <operation>greaterThan</operation>
        <value>2155</value>
    </filters>
    <label>All active opps - multis</label>
</ListView>