unpackaged/main/default/objects/Opportunity/listViews/Closed_Won_subs_July_1_through_today.listView-meta.xml
<ListView>
    <fullName>Closed_Won_subs_July_1_through_today</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>6/1/2019</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Subscriptions_Opportunity</value>
    </filters>
    <label>Closed Won subs - June 2019</label>
</ListView>