unpackaged/main/default/objects/Opportunity/listViews/CPEWebcastRegistrations.listView-meta.xml
<ListView>
    <fullName>CPEWebcastRegistrations</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>ItemID__c</columns>
    <columns>Transaction_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>CPE Webcast</value>
    </filters>
    <label>CPE Webcast Registrations</label>
</ListView>