unpackaged/main/default/objects/Opportunity/listViews/Exp_Multi_s_2016.listView-meta.xml
<ListView>
    <fullName>Exp_Multi_s_2016</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Term_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>lessThan</operation>
        <value>12/31/2017</value>
    </filters>
    <filters>
        <field>Single_Multi__c</field>
        <operation>equals</operation>
        <value>Multi</value>
    </filters>
    <label>Exp Multi's 2016</label>
</ListView>