unpackaged/main/default/objects/Opportunity/listViews/Exp_Multi_s_2017.listView-meta.xml
<ListView>
    <fullName>Exp_Multi_s_2017</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Term_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2017</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>renewal</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.AMOUNT</field>
        <operation>greaterThan</operation>
        <value>2400</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2016</value>
    </filters>
    <label>Exp Multi's 2017</label>
</ListView>