unpackaged/main/default/objects/Opportunity/listViews/My_Active_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Active_Opportunities</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Business_Type__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>notContain</operation>
        <value>CW</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>10/31/2016 12:00 AM</value>
    </filters>
    <label>My Active Opportunities</label>
</ListView>