unpackaged/main/default/objects/Opportunity/listViews/My_Active_Renewal_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Active_Renewal_Opportunities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.EXP_AMOUNT</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost,Closed,Defaulted</value>
    </filters>
    <filters>
        <field>Business_Type__c</field>
        <operation>equals</operation>
        <value>Renewal</value>
    </filters>
    <label>My Active Renewal Opportunities</label>
    <sharedTo />
</ListView>