unpackaged/main/default/objects/Opportunity/listViews/OnBrand_Trial_Opportunities.listView-meta.xml
<ListView>
    <fullName>OnBrand_Trial_Opportunities</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OnBrand_Qualified__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>proma</value>
    </filters>
    <label>OnBrand - Trial Opportunities</label>
</ListView>