unpackaged/main/default/objects/Opportunity/listViews/overduetrans.listView-meta.xml
<ListView>
    <fullName>overduetrans</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Sales_Rep_New__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>"Follow-up, Interested",To be processed,Awaiting Signature or Payment</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>over due trans</label>
</ListView>