unpackaged/main/default/objects/Opportunity/listViews/Renewal_opps_with_close_dates_9_1_12_31.listView-meta.xml
<ListView>
    <fullName>Renewal_opps_with_close_dates_9_1_12_31</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>renewal</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/1/2018</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessOrEqual</operation>
        <value>5/31/2018</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>Renewal opps 3/1 to 5/31</label>
</ListView>