unpackaged/main/default/objects/Opportunity/listViews/This_Week_s_Trials.listView-meta.xml
<ListView>
    <fullName>This_Week_s_Trials</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Subscription</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>This Week's Trials</label>
</ListView>