unpackaged/main/default/objects/Opportunity/listViews/Trial_Test.listView-meta.xml
<ListView>
    <fullName>Trial_Test</fullName>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>Duration__c</columns>
    <columns>Sales_Rep_New__c</columns>
    <columns>Origination__c</columns>
    <columns>Term_Starts__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>notEqual</operation>
        <value>CW: Single New,CW: Single Renewal,CW: Multi New,CW: Multi Renewal</value>
    </filters>
    <filters>
        <field>Origination__c</field>
        <operation>equals</operation>
        <value>Web site</value>
    </filters>
    <label>Trial Test</label>
</ListView>