unpackaged/main/default/objects/Opportunity/listViews/x02YesterdaysPaidSubscriptions.listView-meta.xml
<ListView>
    <fullName>x02YesterdaysPaidSubscriptions</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Transaction_Paid__c</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>Duration__c</columns>
    <columns>Sales_Rep_New__c</columns>
    <columns>Origination__c</columns>
    <columns>Recovery__c</columns>
    <columns>Term_Starts__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>notEqual</operation>
        <value>,Conference</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.AMOUNT</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>02. Yesterday's Paid Subscriptions</label>
</ListView>